# server/internal/addon/model.go
@@ -501,6 +501,7 @@ type ResourceBatch struct {
 type CatalogDescriptor struct {
 	AddonID      string          `json:"addonId"`
 	AddonName    string          `json:"addonName,omitempty"`
+	AddonLogoURL string          `json:"addonLogoUrl,omitempty"`
 	ManifestID   string          `json:"manifestId"`
 	Position     int             `json:"position"`
 	Catalog      ManifestCatalog `json:"catalog"`
